force-app/main/default/objects/Location_Site__c/Location_Site__c.object-meta.xml
<CustomObject>
    <label>Location Site</label>
    <nameField>
        <label>Location Site  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>