force-app/main/default/objects/Location_Site__c/fields/Hospitals__c.field-meta.xml
<CustomField>
    <fullName>Hospitals__c</fullName>
    <description>Nearby hospitals</description>
    <label>Hospitals</label>
    <type>AutoNumber</type>
</CustomField>