force-app/main/default/objects/Location_Site__c/fields/Parks_Recreation__c.field-meta.xml
<CustomField>
    <fullName>Parks_Recreation__c</fullName>
    <description>Parks and recreation</description>
    <label>Parks_Recreation</label>
    <type>AutoNumber</type>
</CustomField>