force-app/main/default/objects/Location_Site__c/fields/Shopping_Centers__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Centers__c</fullName>
    <description>Nearby shopping centers</description>
    <label>Shopping Centers</label>
    <type>AutoNumber</type>
</CustomField>