force-app/main/default/objects/Location_Site__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ad ,ej,ed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>