force-app/main/default/objects/Location_Site__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>ZIP/Postal code</description>
    <label>Zip_Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>